kubernetes/development/agenda-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: agenda-service
  name: agenda-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: agenda-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: agenda-service
    spec:
      containers:
      - env:
        - name: ITJOBS_KEY
          value: 
        - name: IT_JOBS_URL
          value: http://api.itjobs.pt
        - name: SERVICE_DB_HOSTNAME
          value: cloudjobs-database
        image: cloudjobs-agenda-service-local
        imagePullPolicy: "Never"
        name: agenda-service
        ports:
        - containerPort: 10002
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
