kubernetes/development/keywords-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: keywords-service
  name: keywords-service
spec:
  ports:
  - name: "10003"
    port: 10003
    targetPort: 10003
  selector:
    io.kompose.service: keywords-service
status:
  loadBalancer: {}
