kubernetes/development/search-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: search-service
  name: search-service
spec:
  ports:
  - name: "10001"
    port: 10001
    targetPort: 10001
  selector:
    io.kompose.service: search-service
status:
  loadBalancer: {}
