kubernetes/development/statistics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: statistics-service
  name: statistics-service
spec:
  ports:
  - name: "10004"
    port: 10004
    targetPort: 10004
  selector:
    io.kompose.service: statistics-service
status:
  loadBalancer: {}
