kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: meicm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: cloudjobs.local
      http:
        paths:
          - path: /(api/signin)(.*)
            backend:
              serviceName: auth-service
              servicePort: 10000
          - path: /(api/search)(.*)
            backend:
              serviceName: search-service
              servicePort: 10001
          - path: /(api/local)(.*)
            backend:
              serviceName: search-service
              servicePort: 10001
          - path: /(api/keywords)(.*)
            backend:
              serviceName: keywords-service
              servicePort: 10003
          - path: /(api/statistics)(.*)
            backend:
              serviceName: statistics-service
              servicePort: 10004
          - path: /()(.*)
            backend:
              serviceName: frontend
              servicePort: 8080
